# okf-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  hashes.json  justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/scripts/: gen_index.py  run_local_matrix.py
.github/workflows/: publish.yml  test.yml
scripts/: benchmark_search.py
simple/: index.html
simple/okf-core/: index.html
src/okf_core/: __init__.py  cache.py  cli.py  config.py  context.py  documents.py  graph.py  hooks.py  index.py  listing.py  manifest.py  paths.py  search.py  validation.py  versions.py  write_safety.py
tests/: test_cache.py  test_cli.py  test_config.py  test_context.py  test_documents.py  test_gen_index.py  test_graph.py  test_index.py  test_listing.py  test_manifest.py  test_package.py  test_paths.py  test_run_local_matrix.py  test_search.py  test_unlinked_mentions.py  test_validation.py
