[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "okf-core"
version = "0.0.0"
description = "Reusable Python toolkit for working with Open Knowledge Format bundles."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Russell Heilling", email = "russell@linx.net" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "pydantic >= 2, < 3",
  "PyYAML >= 6, < 7",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
  "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/okf_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
