[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[project]
name = "okf-core"
version = "0.1.1"
description = "Reusable Python toolkit for working with Open Knowledge Format bundles."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Russell Heilling", email = "russell@linx.net" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "click >= 8, < 9",
  "markdown-it-py >= 3, < 5",
  "pydantic >= 2, < 3",
  "PyYAML >= 6, < 7",
]

[project.scripts]
okf = "okf_core.cli:cli"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
  "black >= 24, < 27",
  "packaging >= 24",
  "ruff >= 0.9, < 2",
  "mypy >= 2, < 4",
  "actionlint-py >= 1.7, < 2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/okf_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
target-version = ["py311"]
